--- a/src/index.html
+++ b/src/index.html
@@ -33,12 +33,13 @@
         <h1>HTMLdirt</h1>
       </div>
 
-      <div class="common-actions">
+      <div class="common-actions is-expanded">
 
-        <ul>
+        <ul class="common-actions__priority">
             <!-- <li><input type="search" /></li> -->
             <li><button class="button--primary">Save</button></li>
             <li><button>Cancel</button></li>
+            <a href="#">Create New Thing</a>
         </ul>
 
         <ul class="common-actions__overflow">
