Started work on Tabs... don't feel like it belongs here though

--- a/src/index.html
+++ b/src/index.html
@@ -161,7 +161,9 @@
           <p>Then go your own <a href="" title="gets you now here">way</a>!</p>      
         </div>
 
-        <h2>Form</h2>
+        <h2>Basic elements</h2>
+
+        <h3>Form</h3>
 
         <form>
           <fieldset>
@@ -242,7 +244,7 @@
         </form>
 
 
-        <h2>Table</h2>
+        <h3>Table</h3>
 
         <table>
           <thead>
@@ -304,18 +306,18 @@
         </table>
 
 
-        <h2>Typography</h2>
+        <h3>Typography</h3>
 
-        <h3>Paragraphs</h3>
+        <h4>Paragraphs</h4>
 
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse quis est rhoncus, 
         aliquet massa ut, molestie ex. In pellentesque venenatis sagittis. Proin fringilla et ligula 
         quis tristique. Vivamus a risus eget arcu convallis pharetra quis nec turpis. Aenean euismod 
         vehicula erat sed luctus.</p>
 
-        <h3>Lists</h3>
+        <h4>Lists</h4>
 
-        <h4>Unordered Lists</h4>
+        <h5>Unordered Lists</h5>
 
         <ul>
           <li>Unordered lists have basic styles</li>
@@ -329,7 +331,7 @@
           <li>Just more list items mama san</li>
         </ul>
 
-        <h4>Ordered Lists</h4>
+        <h5>Ordered Lists</h5>
 
         <ol>
           <li>Ordered lists also have basic styles</li>
@@ -351,7 +353,7 @@
         </ol>
 
 
-        <h3>Code</h3>
+        <h4>Code</h4>
 
         <pre>
           <code>
@@ -361,7 +363,7 @@
           </code>
         </pre>
 
-        <h3>Almost done</h3>
+        <h4>Almost done</h4>
 
         <blockquote>
           Below is a dividing line -- an hr. This is a quote
@@ -372,6 +374,45 @@
         <hr />
 
         <p>Did you see the &lt;hr /&gt; up there?</p>
+
+
+        <h2>Components</h2>
+
+        <h3>Tabs</h3>
+
+        <div class="tabvue">
+          <ul class="tabvue__tabs">
+            <li class="tabvue__tab"><a href="#stuff">Stuff</a></li>
+            <li class="tabvue__tab active"><a href="#stuff">Others</a></li>
+            <li class="tabvue__tab"><a href="#stuff">Things</a></li>
+            <li class="tabvue__tab"><a href="#stuff">More Stuff</a></li>
+          </ul>
+
+          <div class="tabvue__panes">
+            <div class="tabvue__pane">
+              <h5>Stuff</h5>
+              <p>Nam bibendum, purus et faucibus tristique, leo urna feugiat eros, ut imperdiet neque ligula ut ligula. Morbi commodo magna eget finibus cursus. Duis dapibus eu nibh dictum tempor. Morbi viverra semper sapien, in dictum massa molestie vel. Curabitur vitae magna nec nunc hendrerit tincidunt nec in diam. Morbi sagittis sed arcu at tempus. Praesent fringilla elementum velit, non congue lectus feugiat a.</p>
+            </div>
+
+
+            <div class="tabvue__pane">
+              <h5>Others</h5>
+              <p>Nam bibendum, purus et faucibus tristique, leo urna feugiat eros, ut imperdiet neque ligula ut ligula. Morbi commodo magna eget finibus cursus. Duis dapibus eu nibh dictum tempor. Morbi viverra semper sapien, in dictum massa molestie vel. Curabitur vitae magna nec nunc hendrerit tincidunt nec in diam. Morbi sagittis sed arcu at tempus. Praesent fringilla elementum velit, non congue lectus feugiat a.</p>
+            </div>
+
+
+            <div class="tabvue__pane">
+              <h5>Things</h5>
+              <p>Nam bibendum, purus et faucibus tristique, leo urna feugiat eros, ut imperdiet neque ligula ut ligula. Morbi commodo magna eget finibus cursus. Duis dapibus eu nibh dictum tempor. Morbi viverra semper sapien, in dictum massa molestie vel. Curabitur vitae magna nec nunc hendrerit tincidunt nec in diam. Morbi sagittis sed arcu at tempus. Praesent fringilla elementum velit, non congue lectus feugiat a.</p>
+            </div>
+
+            <div class="tabvue__pane">
+              <h5>More Stuff</h5>
+              <p>Nam bibendum, purus et faucibus tristique, leo urna feugiat eros, ut imperdiet neque ligula ut ligula. Morbi commodo magna eget finibus cursus. Duis dapibus eu nibh dictum tempor. Morbi viverra semper sapien, in dictum massa molestie vel. Curabitur vitae magna nec nunc hendrerit tincidunt nec in diam. Morbi sagittis sed arcu at tempus. Praesent fringilla elementum velit, non congue lectus feugiat a.</p>
+            </div>
+
+          </div>
+        </div>
       </article>
       
     </main>
