--- a/src/layout-blank.html
+++ b/src/layout-blank.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="favicon.ico">
 
-    <title>HTMLdirt</title>
+    <title>Blank Layout Example | HTMLdirt</title>
 
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans:400italic,300,400,700">
 
@@ -36,31 +36,13 @@
 
         <section class="action-menu">
           <ul>
-            <li><h1>HTMLdirt</h1></li>
+            <li><h1>Blank Layout</h1></li>
           </ul>
         </section>
 
       </div>
 
       <div class="action-bar">
-
-        <section class="action-menu action-menu-priority">
-          <ul>
-              <!-- <li><input type="search" /></li> -->
-              <li><button class="button--primary">Priority</button></li>
-              <li><a href="#" class="icon icon-labeled"><i class="fa fa-plus"></i>Items</a></li>
-          </ul>
-        </section>
-
-        <section class="action-menu action-menu-collapsible">
-          <ul>
-              <li><a href="#">Overflow</a></li>
-              <li><a href="#">Action</a></li>
-              <li><a href="#">Items</a></li>
-          </ul>
-
-          <a href="#" class="icon toggle-menu"><i class="fa fa-ellipsis-v"></i></a>
-        </section>
 
       </div>
 
@@ -77,97 +59,24 @@
         </header>
 
         <nav>
+
           <section>
-            <h3><i class="fa fa-object-group"></i>Example Layouts</h3>
+            <h3><i class="fa fa-user"></i>Example Layouts</h3>
             <ul>
-              <li><a href="" class="active">Overview (Start here)</a></li>
-              <li><a href="/layout-blank.html">Blank</a></li>
+              <li><a href="/">Overview (Start here)</a></li>
+              <li><a href="" class="active">Blank</a></li>
             </ul>
           </section>
 
-          <section>
-            <h3><i class="fa fa-magic"></i>Available Themes</h3>
-            <ul>
-              <li><a href="/theme-topsoil.html">Topsoil</a></li>
-              <li><a href="/theme-bluenight.html">Bluenight</a></li>
-            </ul>
-          </section>
-
-          <section>
-            <h3><i class="fa fa-paint-brush"></i>Colors</h3>
-
-            <div class="hd-swatches navigation-drawer__pseudo-section">
-              <h4>canvas</h4>
-              <ul class="n">
-                <li class="canvas-color" title="canvas-color"></li>
-              </ul>
-
-              <h4>primary</h4>
-              <ul>
-                <li class="primary-color" title="primary-color"></li>
-                <li class="primary-color--dark" title="primary-color--dark"></li>
-                <li class="primary-color--light" title="primary-color--light"></li>
-                <li class="primary-color--muted" title="primary-color--muted"></li>
-              </ul>
-
-              <h4>complementary</h4>
-              <ul class="">
-                <li class="complementary-color" title="complementary-color"></li>
-                <li class="complementary-color--dark" title="complementary-color--dark"></li>
-                <li class="complementary-color--light" title="complementary-color--light"></li>
-                <li class="complementary-color--muted" title="complementary-color--muted"></li>
-              </ul>
-
-              <h4>accent</h4>
-              <ul>
-                <li class="accent-color" title="accent-color"></li>
-                <li class="accent-color--dark" title="accent-color--dark"></li>
-                <li class="accent-color--light" title="accent-color--light"></li>
-                <li class="accent-color--muted" title="accent-color--muted"></li>
-              </ul>
-              <ul>
-                <li class="positive-accent-color" title="positive-accent-color"></li>
-                <li class="negative-accent-color" title="negative-accent-color"></li>
-              </ul>
-
-              <h4>text</h4>
-              <ul>
-                <li class="text-color" title="text-color"></li>
-                <li class="text-color--secondary" title="text-color--secondary"></li>
-                <li class="text-color--subtle" title="text-color--subtle"></li>
-              </ul>
-
-              <h4>alt text</h4>
-              <ul>
-                <li class="alt-text-color" title="alt-text-color"></li>
-                <li class="alt-text-color--secondary" title="alt-text-color--secondary"></li>
-                <li class="alt-text-color--subtle" title="alt-text-color--subtle"></li>
-              </ul>
-
-              <h4>link</h4>
-              <ul>
-                <li class="link-color" title="link-color"></li>
-                <li class="link-color--active" title="link-color--active"></li>
-                <li class="link-color--hover" title="link-color--hover"></li>
-                <li class="link-color--visited" title="link-color--visited"></li>
-              </ul>
-
-              <h4>divider</h4>
-              <ul>
-                <li class="divider-color" title="divider-color"></li>
-              </ul>
-            </div>
-          </section>
-          
         </nav>
 
       </aside>
 
       <article class="active-view">
 
-        <h1>Overview</h1>
+        <h1>Start here</h1>
         <div>
-          <p>Start here, then go your own <a href="" title="gets you now here">way</a>!</p>      
+          <p>Then go your own <a href="" title="gets you now here">way</a>!</p>      
         </div>
 
         <h2>Basic elements</h2>
