--- a/src/layout-blank.html
+++ b/src/layout-blank.html
@@ -74,263 +74,15 @@
 
       <article class="active-view">
 
-        <h1>Start here</h1>
+        <h1>This layout is blank</h1>
+
+        <h2>Blank? Really?</h2>
+
         <div>
-          <p>Then go your own <a href="" title="gets you now here">way</a>!</p>      
+          <p>Okay, it is not <em>*really*</em>, but it should give you a good idea of how
+          the styles perform with little to no content.</p>      
         </div>
 
-        <h2>Basic elements</h2>
-
-        <h3>Form</h3>
-
-        <form>
-          <fieldset>
-            <legend>Book Info</legend>
-            <img src="http://placehold.it/105x100" class="photo" width="105" height="100">
-            <div>Summary content here</div>
-          </fieldset>
-
-          <div>
-            <label>Title</label>
-            <input type="text" />
-          </div>
-
-          <div>
-            <label>ISBN</label>
-            <input type="text" />
-          </div>
-
-          <div>
-            <label>Author Name</label>
-            <input type="text" />
-          </div>
-
-          <div>
-            <label>Publish Date</label>
-            <input type="date" />
-          </div>
-
-          <div>
-            <label>Synopsis</label>
-            <input type="text" />
-          </div>
-
-          <div>
-            <label>Cover</label>
-            <select>
-              <option></option>
-              <option selected>Hard cover</option>
-              <option>Soft cover</option>
-            </select>
-          </div>
-
-          <div>
-            <label>Details</label>
-            <textarea placeholder="Some details" rows="5"></textarea>
-          </div>
-
-          <div>
-            <label>Preface</label>
-            <input type="text" />
-          </div>
-
-          <div>
-            <label>Genre</label>
-            <div>
-              <label><input type="checkbox" name="genre"/>Drama</label>
-              <label><input type="checkbox" name="genre" />Comedy</label>
-              <label><input type="checkbox" name="genre" />Action</label>
-              <label><input type="checkbox" name="genre" />Thriller</label>
-            </div>
-          </div>
-
-          <div>
-            <label>Rating</label>
-            <div>
-              <label><input type="radio" name="rating" />Must read</label>
-              <label><input type="radio" name="rating" />Recommended</label>
-              <label><input type="radio" name="rating" />Consider</label>
-              <label><input type="radio" name="rating" />Pass</label>
-            </div>
-          </div>
-
-          <footer>
-            <label></label>
-            <button class="button--primary">Save</button>
-            <button>Cancel</button>
-          </footer>
-        </form>
-
-
-        <h3>Table</h3>
-
-        <table>
-          <thead>
-            <tr>
-              <th>Title</th>
-              <th>Author</th>
-              <th>Publish Date</th>
-              <th>Genre</th>
-              <th>Page Count</th>
-              <th></th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>Tenjis Can</td>
-              <td>Francesca Po</td>
-              <td>2012-06-12</td>
-              <td>Drama</td>
-              <td>304</td>
-              <td>
-                <i class="fa fa-pencil-square-o"></i>
-                <i class="fa fa-trash-o"></i>
-              </td>
-            </tr>
-            <tr>
-              <td>The Joker and the Frock</td>
-              <td>Geoffery Duglas</td>
-              <td>1983-04-21</td>
-              <td>Thriller</td>
-              <td>102</td>
-              <td>
-                <i class="fa fa-pencil-square-o"></i>
-                <i class="fa fa-trash-o"></i>
-              </td>
-            </tr>
-            <tr>
-              <td>Pointy's Guide</td>
-              <td>Spinner Tale</td>
-              <td>1963-03-02</td>
-              <td>Thriller</td>
-              <td>90</td>
-              <td>
-                <i class="fa fa-pencil-square-o"></i>
-                <i class="fa fa-trash-o"></i>
-              </td>
-            </tr>
-            <tr>
-              <td>Spinning Heads</td>
-              <td>Uerrey Kraken</td>
-              <td>1997-03-19</td>
-              <td>Comedy</td>
-              <td>65</td>
-              <td>
-                <i class="fa fa-pencil-square-o"></i>
-                <i class="fa fa-trash-o"></i>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-
-
-        <h3>Typography</h3>
-
-        <h4>Paragraphs</h4>
-
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse quis est rhoncus, 
-        aliquet massa ut, molestie ex. In pellentesque venenatis sagittis. Proin fringilla et ligula 
-        quis tristique. Vivamus a risus eget arcu convallis pharetra quis nec turpis. Aenean euismod 
-        vehicula erat sed luctus.</p>
-
-        <h4>Lists</h4>
-
-        <h5>Unordered Lists</h5>
-
-        <ul>
-          <li>Unordered lists have basic styles</li>
-          <li>
-            They use the circle list style
-            <ul>
-              <li>Nested lists styled to feel right</li>
-              <li>Can nest either type of list into the other</li>
-            </ul>
-          </li>
-          <li>Just more list items mama san</li>
-        </ul>
-
-        <h5>Ordered Lists</h5>
-
-        <ol>
-          <li>Ordered lists also have basic styles</li>
-          <li>
-            They use the decimal list style
-            <ol>
-              <li>Nested ordered list item</li>
-              <li>Another list item, nested</li>
-            </ol>
-          </li>
-          <li>
-            They use the decimal list style
-            <ul>
-              <li>Ordered and unordered can be nested</li>
-              <li>Can nest either type of list into the other</li>
-            </ul>
-          </li>
-          <li>Last list item just for the fun</li>
-        </ol>
-
-
-        <h4>Code</h4>
-
-        <pre>
-          <code>
-    .some-class {
-      background-color: red;
-    }
-          </code>
-        </pre>
-
-        <h4>Almost done</h4>
-
-        <blockquote>
-          Below is a dividing line -- an hr. This is a quote
-
-          <cite>Amonynus</cite>
-        </blockquote>
-
-        <hr />
-
-        <p>Did you see the &lt;hr /&gt; up there?</p>
-
-
-        <h2>Components</h2>
-
-        <h3>Tabs</h3>
-
-        <div class="tabvue">
-          <ul class="tabvue__tabs">
-            <li class="tabvue__tab"><a href="#stuff">Stuff</a></li>
-            <li class="tabvue__tab active"><a href="#stuff">Others</a></li>
-            <li class="tabvue__tab"><a href="#stuff">Things</a></li>
-            <li class="tabvue__tab"><a href="#stuff">More Stuff</a></li>
-          </ul>
-
-          <div class="tabvue__panes">
-            <div class="tabvue__pane">
-              <h5>Stuff</h5>
-              <p>Nam bibendum, purus et faucibus tristique, leo urna feugiat eros, ut imperdiet neque ligula ut ligula. Morbi commodo magna eget finibus cursus. Duis dapibus eu nibh dictum tempor. Morbi viverra semper sapien, in dictum massa molestie vel. Curabitur vitae magna nec nunc hendrerit tincidunt nec in diam. Morbi sagittis sed arcu at tempus. Praesent fringilla elementum velit, non congue lectus feugiat a.</p>
-            </div>
-
-
-            <div class="tabvue__pane">
-              <h5>Others</h5>
-              <p>Nam bibendum, purus et faucibus tristique, leo urna feugiat eros, ut imperdiet neque ligula ut ligula. Morbi commodo magna eget finibus cursus. Duis dapibus eu nibh dictum tempor. Morbi viverra semper sapien, in dictum massa molestie vel. Curabitur vitae magna nec nunc hendrerit tincidunt nec in diam. Morbi sagittis sed arcu at tempus. Praesent fringilla elementum velit, non congue lectus feugiat a.</p>
-            </div>
-
-
-            <div class="tabvue__pane">
-              <h5>Things</h5>
-              <p>Nam bibendum, purus et faucibus tristique, leo urna feugiat eros, ut imperdiet neque ligula ut ligula. Morbi commodo magna eget finibus cursus. Duis dapibus eu nibh dictum tempor. Morbi viverra semper sapien, in dictum massa molestie vel. Curabitur vitae magna nec nunc hendrerit tincidunt nec in diam. Morbi sagittis sed arcu at tempus. Praesent fringilla elementum velit, non congue lectus feugiat a.</p>
-            </div>
-
-            <div class="tabvue__pane">
-              <h5>More Stuff</h5>
-              <p>Nam bibendum, purus et faucibus tristique, leo urna feugiat eros, ut imperdiet neque ligula ut ligula. Morbi commodo magna eget finibus cursus. Duis dapibus eu nibh dictum tempor. Morbi viverra semper sapien, in dictum massa molestie vel. Curabitur vitae magna nec nunc hendrerit tincidunt nec in diam. Morbi sagittis sed arcu at tempus. Praesent fringilla elementum velit, non congue lectus feugiat a.</p>
-            </div>
-
-          </div>
-        </div>
       </article>
       
     </main>
